--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -2,11 +2,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
-
-.header {
-  display: flex;
-  background-color: yellow;
-  margin-bottom: 10px;
-  min-height: 50px;
+a {
+  text-decoration: none;
+  color: black;
 }
