--- a/Client/src/shared/header/Header.module.css
+++ b/Client/src/shared/header/Header.module.css
@@ -2,7 +2,7 @@
   display: grid;
   align-items: center;
   justify-items: center;
-  grid-template-columns: 150px 1fr 100px;
+  grid-template-columns: 150px 1fr 100px 100px;
   background-color: white;
   border-bottom: gray 1px solid;
   margin-bottom: 10px;
