--- a/Client/src/shared/button/Button.module.css
+++ b/Client/src/shared/button/Button.module.css
@@ -28,7 +28,7 @@
   color: black;
   border: solid 1px black;
 } */
-button:before {
+.button:before {
   content: "";
   position: absolute;
   top: 0;
@@ -39,7 +39,7 @@ button:before {
   /* border-radius: 5px; */
   transition: all 0.3s ease-in-out;
 }
-button:hover:before {
+.button:hover:before {
   width: 100%;
 }
 .button:active {
