--- a/Client/src/broatcast-item/BroadcastItem.module.css
+++ b/Client/src/broatcast-item/BroadcastItem.module.css
@@ -33,10 +33,10 @@
   grid-template-columns: 2fr 1fr;
 }
 .broadcastItem {
-  border: solid 2px lightskyblue;
+  border: solid 2px cornflowerblue;
 }
 .info {
-  border: solid 2px lightskyblue;
+  border: solid 2px cornflowerblue;
 
   padding: 7px;
   font-size: 18px;
@@ -44,6 +44,13 @@
 .info span {
   display: flex;
   align-items: center;
+}
+.username {
+  font-size: 20px;
+  margin-right: 10px;
+}
+.stream_title {
+  font-size: 24px;
 }
 .online {
   content: "";
@@ -60,4 +67,7 @@
   background-color: gray;
   border-radius: 10px;
   margin-right: 10px;
+}
+.about {
+  border: 2px solid cornflowerblue;
 }
