--- a/Client/src/account/Settings.module.css
+++ b/Client/src/account/Settings.module.css
@@ -35,12 +35,17 @@ h2 {
   }
 }
 .row {
-  display: grid;
-  grid-template-columns: repeat();
-  margin: 10px 10px;
+  display: flex;
 }
-.row label {
-  font-size: 14px;
-  grid-column-start: 1;
-  grid-column-end: 4;
+
+.title {
+  font-weight: bold;
+  font-size: 24px;
+}
+label {
+  display: block;
+  padding-bottom: 5px;
+}
+.block {
+  margin-top: 10px;
 }
