--- a/Client/src/account/Settings.module.css
+++ b/Client/src/account/Settings.module.css
@@ -4,7 +4,7 @@
   margin: 5px;
 }
 h2 {
-  padding-left: 10px;
+  /* padding-left: 10px; */
   margin-bottom: 10px;
 }
 .containerLog {
@@ -14,6 +14,15 @@ h2 {
 }
 .container {
   padding: 10px;
+}
+input {
+  margin-right: 10px;
+}
+button {
+  margin-right: 10px;
+}
+span {
+  margin-right: 10px;
 }
 .form {
   margin-top: 10px;
