--- a/Client/src/broadcasts/PlayerBox.module.css
+++ b/Client/src/broadcasts/PlayerBox.module.css
@@ -1,6 +1,6 @@
 .playerbox {
   border: 3px solid lightblue;
-  min-height: 200px;
+  height: 200px;
   margin-bottom: 5px;
   display: flex;
   /* justify-content: center; */
