feat:Mobile css

--- a/Client/src/shared/header/SearchBar.module.css
+++ b/Client/src/shared/header/SearchBar.module.css
@@ -24,3 +24,8 @@
   transform: rotate(-45deg);
   background-color: black;
 }
+@media (max-width: 900px) {
+  .container {
+    display: none;
+  }
+}
