--- a/Client/src/broadcasts/Broadcasts.module.css
+++ b/Client/src/broadcasts/Broadcasts.module.css
@@ -1,22 +1,22 @@
-.container {
+/* .container {
   display: grid;
   margin: 0 50px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   column-gap: 50px;
-}
-@media (max-width: 900px) {
-  .container {
-    display: grid;
-    margin: 0 50px;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 50px;
-  }
-}
-@media (max-width: 400px) {
+} */
+/* @media (max-width: 900px) {
   .container {
     display: grid;
     margin: 0 50px;
     grid-template-columns: 1fr;
     column-gap: 50px;
+  }
+} */
+@media (max-width: 400px) {
+  .container {
+    margin: 0 50px;
+  }
+  .container hr {
+    width: 80vw;
   }
 }
