--- a/Client/src/broadcasts/PlayerBox.module.css
+++ b/Client/src/broadcasts/PlayerBox.module.css
@@ -5,6 +5,16 @@
   display: flex;
   /* justify-content: center; */
 }
+@media (max-width: 900px) {
+  .playerbox {
+    border: 2px solid lightblue;
+    height: 180px;
+    width: 80vw;
+    margin-bottom: 5px;
+    display: flex;
+    /* justify-content: center; */
+  }
+}
 .playerbox img {
   width: 100%;
 }
