--- a/Client/src/broatcast-item/BroadcastItem.module.css
+++ b/Client/src/broatcast-item/BroadcastItem.module.css
@@ -71,3 +71,12 @@
 .about {
   border: 2px solid cornflowerblue;
 }
+@media (max-width: 400px) {
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .broadcastItem {
+    border: solid 2px cornflowerblue;
+  }
+}
