--- a/Client/src/shared/header/Header.module.css
+++ b/Client/src/shared/header/Header.module.css
@@ -13,3 +13,9 @@
   padding: 5px;
   height: 40px;
 }
+@media (max-width: 900px) {
+  .header {
+    display: flex;
+    justify-content: space-around;
+  }
+}
