--- a/Client/src/broadcasts/Broadcasts.module.css
+++ b/Client/src/broadcasts/Broadcasts.module.css
@@ -1,22 +1,38 @@
-/* .container {
-  display: grid;
-  margin: 0 50px;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  column-gap: 50px;
-} */
-/* @media (max-width: 900px) {
-  .container {
-    display: grid;
-    margin: 0 50px;
-    grid-template-columns: 1fr;
-    column-gap: 50px;
-  }
-} */
-@media (max-width: 400px) {
+@media (min-width: 320px) {
   .container {
     margin: 0 50px;
   }
   .container hr {
     width: 80vw;
+  }
+  .cont {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    margin: 0 50px;
+  }
+  .container hr {
+    width: 80vw;
+  }
+  .cont {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 50px;
+  }
+}
+@media (min-width: 1440px) {
+  .container {
+    margin: 0 50px;
+  }
+  .container hr {
+    width: 80vw;
+  }
+  .cont {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 50px;
   }
 }
